--- a/templates/next/boilerplate/src/pages/_app.tsx.ejs
+++ b/templates/next/boilerplate/src/pages/_app.tsx.ejs
@@ -1,6 +1,11 @@
-import '@/styles/globals.css'
+import '@/assets/styles/globals.css'
 import type { AppProps } from 'next/app'
+<%- modules.join('\n') %>
 
 export default function App({ Component, pageProps }: AppProps) {
-  return <Component {...pageProps} />
+  return (
+    <%- top.join('\n') %>
+    <Component {...pageProps} />
+    <%- bottom.join('\n') %>
+  )
 }
